refactor: change view component definition

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Sixtyfour&display=swap" rel="stylesheet">
     <!-- CSS STYLESHEETS -->
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-    <div>HOME</div>
-    <a href="./views/DesignView.html">Go to design</a>
-    <a href="./views/ExportView.html">Go to Export</a>
+    <div id="body"></div>
 </body>
+
+<script src="./main.js" type="module"></script>
+
 </html>
